Getting started with API

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ body {
 	background-position: 0px;
 }
 
+.none {
+	display: none !important;
+}
+
 .container-left {
 	padding: 25px 15px 100px;
 	width: 930px;
